# battery_spec

./: README.md
battery_spec_test/: Cargo.toml
battery_spec_test/GPTscripts/: battery_spec_scripts.txt
battery_spec_test/src/: lib.rs  main.rs  script.py  script2.py  styles.css
battery_spec_test/src/energy_components/: batteries.rs  ev_chargers.rs  mod.rs  photovoltaic.rs
battery_spec_test/src/surreal_data_structs/: mod.rs
battery_spec_test/src/time_processes/: mod.rs
charger-station/: Cargo.toml  Dioxus.toml
charger-station/src/: main.rs
