[package]
name = "battery_spec_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.4"
tokio = "1.40.0"
chrono = "0.4.35"
rand_distr = "0.4.3"
rand = "0.8.5"
plotters = "0.3.5"
serde = "1.0.197"
csv = "1.3.0"
surrealdb = {version = "2.0.4", features = ["protocol-ws","protocol-http","kv-mem"]}
uuid = { version = "1.9.1", features = ["v4", "fast-rng"] }
polars = "0.43.1"
anyhow = "1.0.89"
either = "1.13.0"
